@@ -7,6 +7,7 @@
 	(epackage-interactive-p): New. Emacs 23.3 compatibility.
 	(epackage--layout-template-info): Add "Elpa" field. Document thin
 	in the spec.
+	(epackage-locate-library): New.
 
 2012-01-04 Wed  Jari Aalto  <jari.aalto@cante.net>
 
